fixed overlay overflow, image sizes

--- a/client/footer/footer.css
+++ b/client/footer/footer.css
@@ -65,6 +65,7 @@ nav.ui.mobile.overlay {
   width: 100%;
   height: 100%;
   display: none;
+  overflow-y: scroll;
 }
 
 .ui.vertical.menu {
